src/test/deca/syntax/valid/created/decl_var/float_as_identifier.deca
// Description:
//  Affectation de float avec identifier float
// Resultats:
//  OK

{
    int a, float, b;
    float x;
    float = 5;
}