src/test/deca/syntax/invalid/created/matherror/matherror10.deca
// Description:
//  Affectation de float avec identifier float
// Resultats:
//  Ligne 7 : missing IDENT at ';'

{
float a = 3. ;
}